--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react": "^7.33.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "lint-staged": "^14.0.1",
     "path": "^0.12.7",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
