--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
