--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mantine/core": "^7.0.0",
+    "@mantine/hooks": "^7.0.0",
     "@tanstack/react-query": "^4.35.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^18.2.7",
@@ -46,6 +48,9 @@
     "html-webpack-plugin": "^5.5.0",
     "lint-staged": "^14.0.1",
     "path": "^0.12.7",
+    "postcss": "^8.4.30",
+    "postcss-preset-mantine": "^1.7.0",
+    "postcss-simple-vars": "^7.0.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^5.2.2",
